<resources>
    <string name="app_name">Pink Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="prc">%</string>
    <string name="com">,</string>
    <string name="dot">.</string>
    <string name="eq">=</string>
    <string name="powButtonText">xʸ</string>
    <string name="pow">^</string>
    <string name="brc">()</string>
    <string name="brcOpen">(</string>
    <string name="brcClose">)</string>
    <string name="clr">C</string>
    <string name="del">DEL </string>
    <string name="themes">themes</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="lightTheme">Dark Theme</string>
    <string name="pinkTheme">Pink Theme</string>
    <string name="blueTheme">Blue Theme</string>


</resources>